2012-08-24  6.7.9-2 Cristy  <quetzlzacatenango@image...>
  * Support -channel sync option for -equalize (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21746).

2012-08-26  6.7.9-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-2, SVN revision 9120.

2012-08-25  6.7.9-2 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug in Q32 builds that erroneously read grayscale 16-bit PNGs
    as PseudoColor.

2012-08-24  6.7.9-2 Cristy  <quetzlzacatenango@image...>
  * Support -channel option for -solarize (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21738).

2012-08-23  6.7.9-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-1, SVN revision 9095.

2012-08-22  6.7.9-1 Glenn Randers-Pehrson <glennrp@image...>
  * The gAMA chunk with gamma==1.0 was ignored while deciding whether to set
    the image colorspace to GRAY when reading grayscale PNG images.

2012-08-16  6.7.9-1 Cristy  <quetzlzacatenango@image...>
  * Adjust scaling for Luv colorspace conversion (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21664).
  * Copy alpha channel of the -median option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21694).
  * Don't add matte channel for -coalesce if input images don't have one.
  * Prevent memory leak in ImageToBlob() if image write fails.
  * In rare cases, label would not auto-size properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21716).
  * Identify command now reports the image colorspace for non-verbose results.
  * Account for stroke width when rendering a caption (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=21721).
  * Don't colorize alpha channel if it is not active (reference
   http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21547

2012-08-15  6.7.9-0 Cristy  <quetzlzacatenango@image...>